fix for bootstrap bug on ios mobile

--- a/docassemble_webapp/docassemble/webapp/static/app/app.css
+++ b/docassemble_webapp/docassemble/webapp/static/app/app.css
@@ -245,6 +245,12 @@ a.backbuttoncolor:focus {
     }
 }
 
+input[type="text"],
+input[type="email"],
+input[type="date"] {
+	height: 2.375rem;
+}
+
 @media (min-width: 768px) {
     .datext-right {
 	text-align: right !important;
